--- a/docs/part2/20.md
+++ b/docs/part2/20.md
@@ -10,6 +10,7 @@
 | ---------------------------------------------------- |
 | [18 使用DirectXCollision库进行碰撞检测](part2/18.md) |
 | [19 模型加载：Assimp库](part2/19.md)                 |
+| [CPU与GPU计时器](misc/Timer.md)                      |
 
 # 硬件实例化(Hardware Instancing)
 
