--- a/docs/part2/23.md
+++ b/docs/part2/23.md
@@ -310,7 +310,7 @@ float3 refract(float3 incident, float3 normal, float eta);
 if (g_RefractionEnabled)
 {
     float3 incident = -toEyeW;
-    float3 refractionVector = refract(incident, pIn.NormalW, g_Eta);
+    float3 refractionVector = refract(incident, pIn.normalW, g_Eta);
     float4 refractionColor = g_TexCube.Sample(g_Sam, refractionVector);
 
     litColor += g_Material.Reflect * refractionColor;
