--- a/docs/part3/26.md
+++ b/docs/part3/26.md
@@ -204,7 +204,7 @@ void GameApp::Compute()
 
 最后通过ScreenGrab库将纹理保存到文件，就可以结束程序了。
 
-运行结束后，可以打开`flareoutput.dds`查看结果(建议使用DxTex打开)：
+运行结束后，可以打开`flareoutput.dds`查看结果：
 
 ![](..\assets\26\06.png)
 
