--- a/docs/part3/27.md
+++ b/docs/part3/27.md
@@ -85,7 +85,7 @@ groupshared float4 g_Cache[256];
 void CS(uint3 GTid : SV_GroupThreadID,
 	uint3 DTid : SV_DispatchThreadID)
 {
-	// 将纹理像素值缓存到组组共享内存
+	// 将纹理像素值缓存到组共享内存
 	g_Cache[GTid.x] = g_Input[DTid.xy];
 	
 	// 等待所有线程完成写入
