--- a/docs/part3/30.md
+++ b/docs/part3/30.md
@@ -222,18 +222,19 @@ for (int i = 0; i < m_BlurTimes; ++i)
 前面提到，从越界的索引处读取数据并不是非法操作，而是返回0（对越界索引处进行写入是不会执行任何操作的，即no-op）。然而，我们在读取越界数据时并不希望得到数据0，因为这意味着值为0的颜色（即黑色）会影响到边界处的模糊结果。我们此时期盼能实现出类似于**钳位**（clamp）纹理寻址模式的效果，即在读取越界的数据时，能够获得一个与边界纹素相同的数据。这个方案可以通过对索引进行钳位来加以实现，在下面完整的着色器代码可以看到（这里将模糊半径调大了）：
 
 ```hlsl
-// Blur.hlsli
+// PostProcess.hlsli
 cbuffer CBSettings : register(b0)
 {
     int g_BlurRadius;
     
-    // 最多支持15个模糊权值
+    // 最多支持31个模糊权值
     float4 g_Weights[8];
     // 不位于常量缓冲区
     static float s_Weights[32] = (float[32]) g_Weights;
 }
 
 Texture2D g_Input : register(t0);
+Texture2D g_EdgeInput : register(t1);
 
 RWTexture2D<float4> g_Output : register(u0);
 
@@ -241,16 +242,15 @@ SamplerState g_SamLinearWrap : register(s0); // 线性过滤+Wrap采样器
 SamplerState g_SamPointClamp : register(s1); // 点过滤+Clamp采样器
 
 
-#define MAX_BLUR_RADIUS 7
+#define MAX_BLUR_RADIUS 15
 #define N 256
 #define CacheSize (N + 2 * MAX_BLUR_RADIUS)
-
 
 ```
 
 ```hlsl
 // Blur_Horz_CS.hlsl
-#include "PostProcess.hlsli"
+#include "Blur.hlsli"
 
 groupshared float4 g_Cache[CacheSize];
 
@@ -258,6 +258,13 @@ groupshared float4 g_Cache[CacheSize];
 void CS(int3 GTid : SV_GroupThreadID,
     int3 DTid : SV_DispatchThreadID)
 {
+    // 放在数组中以便于索引
+    float g_Weights[19] =
+    {
+        w0, w1, w2, w3, w4, w5, w6, w7, w8, w9,
+        w10, w11, w12, w13, w14, w15, w16, w17, w18
+    };
+
     // 通过填写本地线程存储区来减少带宽的负载。若要对N个像素进行模糊处理，根据模糊半径，
     // 我们需要加载N + 2 * BlurRadius个像素
     
@@ -270,19 +277,17 @@ void CS(int3 GTid : SV_GroupThreadID,
         g_Cache[GTid.x] = g_Input[int2(x, DTid.y)];
     }
     
-    uint texWidth, texHeight;
-    g_Input.GetDimensions(texWidth, texHeight);
-    
     if (GTid.x >= N - g_BlurRadius)
     {
         // 对于图像左侧边界存在越界采样的情况进行钳位(Clamp)操作
-        int x = min(DTid.x + g_BlurRadius, texWidth - 1);
+        // 震惊的是Texture2D居然能通过属性Length访问宽高
+        int x = min(DTid.x + g_BlurRadius, g_Input.Length.x - 1);   
         g_Cache[GTid.x + 2 * g_BlurRadius] = g_Input[int2(x, DTid.y)];
     }
     
     // 将数据写入Cache的对应位置
     // 针对图形边界处的越界采样情况进行钳位处理
-    g_Cache[GTid.x + g_BlurRadius] = g_Input[min(DTid.xy, float2(texWidth, texHeight) - 1)];
+    g_Cache[GTid.x + g_BlurRadius] = g_Input[min(DTid.xy, g_Input.Length.xy - 1)];
     
     // 等待所有线程完成任务
     GroupMemoryBarrierWithGroupSync();
@@ -293,12 +298,11 @@ void CS(int3 GTid : SV_GroupThreadID,
     {
         int k = GTid.x + g_BlurRadius + i;
         
-        blurColor += s_Weights[i + g_BlurRadius] * g_Cache[k];
+        blurColor += g_Weights[i + g_BlurRadius] * g_Cache[k];
     }
     
     g_Output[DTid.xy] = blurColor;
 }
-
 ```
 
 `Blur_Vert_CS.hlsl`与上面的代码类似，就不再放出。
