--- a/docs/part3/31.md
+++ b/docs/part3/31.md
@@ -677,8 +677,8 @@ SamplerState g_Sam : register(s0);
 
 struct VertexPosHTex
 {
-    float4 PosH : SV_POSITION;
-    float2 Tex : TEXCOORD;
+    float4 posH : SV_POSITION;
+    float2 tex : TEXCOORD;
 };
 
 // 这仅仅用于Alpha几何裁剪，以保证阴影的显示正确。
@@ -686,7 +686,7 @@ struct VertexPosHTex
 // 着色器设为nullptr
 void ShadowPS(VertexPosHTex pIn)
 {
-    float4 diffuse = g_DiffuseMap.Sample(g_Sam, pIn.Tex);
+    float4 diffuse = g_DiffuseMap.Sample(g_Sam, pIn.tex);
     
     // 不要将透明像素写入深度贴图
     clip(diffuse.a - 0.1f);
