--- a/docs/part3/32.md
+++ b/docs/part3/32.md
@@ -187,7 +187,7 @@ void SSAO_VS(uint vertexID : SV_VertexID,
 }
 ```
 
-现在，对于每个像素而言，我们得到了从观察点射向该像素直到远平面对应一点的向量`ToFarPlane`（亦即向量**v**），这些向量都是通过插值算出来的。然后我们对法向量/深度图进行采样来得到对应像素在观察空间中的法向量和深度值。重建屏幕空间坐标**p**的思路为：已知采样出的观察空间的z值，它也正好是点**p**的z值；并且知道了原点到远平面的向量**v**。由于这条射线必然经过点**p**，故它们满足：
+现在，对于每个像素而言，我们得到了从观察点射向该像素直到远平面对应一点的向量`farPlanePoint`（亦即向量**v**），这些向量都是通过插值算出来的。然后我们对法向量/深度图进行采样来得到对应像素在观察空间中的法向量和深度值。重建屏幕空间坐标**p**的思路为：已知采样出的观察空间的z值，它也正好是点**p**的z值；并且知道了原点到远平面的向量**v**。由于这条射线必然经过点**p**，故它们满足：
 $$
 \mathbf{p}=\frac{p_z}{v_z}\mathbf{v}
 $$
@@ -422,6 +422,25 @@ pImpl->m_pEffectHelper->SetSamplerStateByName("g_SamRandomVec", pImpl->m_pSamRan
 
 
 ```hlsl
+// 使用一个三角形覆盖NDC空间 
+// (-1, 1)________ (3, 1)
+//        |   |  /
+// (-1,-1)|___|/ (1, -1)   
+//        |  /
+// (-1,-3)|/    
+void SSAO_VS(uint vertexID : SV_VertexID,
+             out float4 posH : SV_position,
+             out float3 farPlanePoint : POSITION,
+             out float2 texcoord : TEXCOORD)
+{
+    float2 grid = float2((vertexID << 1) & 2, vertexID & 2);
+    float2 xy = grid * float2(2.0f, -2.0f) + float2(-1.0f, 1.0f);
+    
+    texcoord = grid * float2(1.0f, 1.0f);
+    posH = float4(xy, 1.0f, 1.0f);
+    farPlanePoint = g_FarPlanePoints[vertexID].xyz;
+}
+
 // 绘制SSAO图的像素着色器
 float4 SSAO_PS(float4 posH : SV_position,
                float3 farPlanePoint : POSITION,
@@ -599,13 +618,6 @@ float4 BilateralPS(float4 posH : SV_position,
     return color / totalWeight;
 }
 
-
-float4 DebugAO_PS(float4 posH : SV_position,
-                  float2 texCoord : TEXCOORD) : SV_Target
-{
-    float depth = g_DiffuseMap.Sample(g_SamLinearWrap, texCoord).r;
-    return float4(depth.rrr, 1.0f);
-}
 
 ```
 
