--- a/docs/part2/19.md
+++ b/docs/part2/19.md
@@ -138,8 +138,14 @@ Assimp导入模型的实现存放在`ModelManager`类中。现在我们需要使
 
 using namespace Assimp;
 Importer importer;
-const aiScene* pAssimpScene = importer.ReadFile(filename.data(), aiProcess_ConvertToLeftHanded |
-        aiProcess_GenBoundingBoxes | aiProcess_Triangulate | aiProcess_ImproveCacheLocality);
+// 去掉里面的点、线图元
+importer.SetPropertyInteger(AI_CONFIG_PP_SBP_REMOVE, aiPrimitiveType_LINE | aiPrimitiveType_POINT);
+auto pAssimpScene = importer.ReadFile(filename.data(), 
+    aiProcess_ConvertToLeftHanded |     // 转为左手系
+    aiProcess_GenBoundingBoxes |        // 获取碰撞盒
+    aiProcess_Triangulate |             // 将多边形拆分
+    aiProcess_ImproveCacheLocality |    // 改善缓存局部性
+    aiProcess_SortByPType);             // 按图元顶点数排序用于移除非三角形图元
 ```
 
 由于读取的模型有可能是左手系的，也有可能是右手系的，甚至有的模型三角形绕序也不一样。对DirectX来说，常用的是左手系及顺时针三角形绕序，我们可以使用`aiProcess_ConvertToLeftHanded`宏将其处理成上述所说的左手系和顺时针绕序。
@@ -770,7 +776,7 @@ void BasicEffect::SetMaterial(const Material& material)
     pImpl->m_pEffectHelper->GetConstantBufferVariable("g_Material")->SetRaw(&phongMat);
 
     auto pStr = material.TryGet<std::string>("$Diffuse");
-    pImpl->m_pEffectHelper->SetShaderResourceByName("g_DiffuseMap", pStr ? tm.GetTexture(*pStr) : nullptr);
+    pImpl->m_pEffectHelper->SetShaderResourceByName("g_DiffuseMap", pStr ? tm.GetTexture(*pStr) : tm.GetNullTexture());
 }
 
 MeshDataInput BasicEffect::GetInputData(const MeshData& meshData)
@@ -844,6 +850,41 @@ void BasicEffect::Apply(ID3D11DeviceContext* deviceContext)
     if (pImpl->m_pCurrEffectPass)
         pImpl->m_pCurrEffectPass->Apply(deviceContext);
 }
+```
+
+## shader读取纹理的优化
+
+考虑到有的模型可能不存在漫反射贴图，我们可以为模型添加常量色。一开始我们可能会这样写：
+
+```hlsl
+float4 diffuse = float4(1.0f, 1.0f, 1.0f, 1.0f);
+uint2 texWidth, texHeight;
+g_DiffuseMap.GetDimensions(texWidth, texHeight);
+if (texWidth > 0 && texHeight > 0)
+{
+	diffuse = g_DiffuseMap.Sample(g_Sam, pIn.texcoord);
+}
+```
+
+但引入分支会引发性能问题。可以考虑创建一个1x1大小的、RGBA均为255的白纹理，然后如果模型没有漫反射纹理则传入这个白纹理。通过`TextureManager::GetNullTexture`来获取：
+
+```cpp
+auto pStr = material.TryGet<std::string>("$Diffuse");
+pImpl->m_pEffectHelper->SetShaderResourceByName("g_DiffuseMap", pStr ? tm.GetTexture(*pStr) : tm.GetNullTexture());
+```
+
+然后shader中只需要一句话：
+
+```hlsl
+float4 diffuse = g_DiffuseMap.Sample(g_Sam, pIn.texcoord);
+```
+
+类似的，我们可以用这种方式来支持纹理颜色或常量颜色的设置，使用下面的代码：
+
+```hlsl
+// 使用纹理时，将g_DiffuseColor设为(1.0f, 1.0f, 1.0f, 1.0f)
+// 使用常量颜色时，将g_DiffuseMap设为1x1白纹理
+float4 diffuse = g_DiffuseMap.Sample(g_Sam, pIn.texcoord) * g_DiffuseColor;
 ```
 
 # GameObject类的变化
