--- a/docs/part2/25.md
+++ b/docs/part2/25.md
@@ -254,16 +254,6 @@ struct VertexPosNormalTangentTex
     float2 tex : TEXCOORD;
 };
 
-struct InstancePosNormalTangentTex
-{
-    float3 posL : POSITION;
-    float3 normalL : NORMAL;
-    float4 tangentL : TANGENT;
-    float2 tex : TEXCOORD;
-    matrix world : World;
-    matrix worldInvTranspose : WorldInvTranspose;
-};
-
 struct VertexPosHWNormalTangentTex
 {
     float4 posH : SV_POSITION;
@@ -339,15 +329,9 @@ float3 bumpedNormalW = NormalSampleToWorldSpace(normalMapSample, pIn.normalW, pI
 // 像素着色器(3D)
 float4 PS(VertexPosHWNormalTangentTex pIn) : SV_Target
 {
-    // 若不使用纹理，则使用默认白色
-    float4 texColor = float4(1.0f, 1.0f, 1.0f, 1.0f);
-
-    if (g_TextureUsed)
-    {
-        texColor = g_DiffuseMap.Sample(g_Sam, pIn.tex);
-        // 提前进行裁剪，对不符合要求的像素可以避免后续运算
-        clip(texColor.a - 0.1f);
-    }
+    float4 texColor = g_DiffuseMap.Sample(g_Sam, pIn.tex);
+    // 提前进行裁剪，对不符合要求的像素可以避免后续运算
+    clip(texColor.a - 0.1f);
     
     // 标准化法向量和切线
     pIn.normalW = normalize(pIn.normalW);
