--- a/docs/part3/40.md
+++ b/docs/part3/40.md
@@ -413,7 +413,7 @@ return float4(g_TextureInput.SampleLevel(g_Sampler, posM, 0).xyz, lumaM);
 
 ![13](..\assets\40\13.png)
 
-FXAA的一个缺点在于，移动场景的时候我们可以发现部分高频区域会出现闪烁现象（感受一下“粒子加速器”）。
+FXAA的一个缺点在于，无法解决在移动场景时部分高频区域出现的闪烁现象（感受一下“粒子加速器”）。
 
 ![16](..\assets\40\14.gif)
 
