--- a/docs/part3/31.md
+++ b/docs/part3/31.md
@@ -355,18 +355,12 @@ float CalcShadowFactor(SamplerComparisonState samShadow, Texture2D shadowMap, fl
     const float dx = SMAP_DX;
 
     float percentLit = 0.0f;
-    const float2 offsets[9] =
-    {
-        float2(-dx, -dx), float2(0.0f, -dx), float2(dx, -dx),
-        float2(-dx, 0.0f), float2(0.0f, 0.0f), float2(dx, 0.0f),
-        float2(-dx, +dx), float2(0.0f, +dx), float2(dx, +dx)
-    };
-                      
+             
     [unroll]
     for (int i = 0; i < 9; ++i)
     {
         percentLit += shadowMap.SampleCmpLevelZero(samShadow,
-            shadowPosH.xy + offsets[i], depth).r;
+            shadowPosH.xy, depth, int2(i % 3 - 1, i / 3 - 1)).r;
     }
     
     return percentLit /= 9.0f;
