--- a/docs/part1/01.md
+++ b/docs/part1/01.md
@@ -376,7 +376,7 @@ else
 
 同时之前也提到，如果系统支持Direct3D 11.1的话，我们就可以拿到DXGI 1.2的相关对象（如`IDXGIFactory2`)。
 
-这里要仔细品味`ComPtr::As`方法的作用。该方法相当于调用`IUnknown::QueryInterface`，用于查询这个接口类指针指向的对象是否实现了某个特定接口(即有没有继承，但这个继承不一定是直接继承关系，还可以是间接继承)，若有则返回这个特定接口的指针。比如说`IDXGIFactory2`继承自`IDXGIFactory1`，此时我们有了一个`IDXGIFactory1*`，但我们不知道它能不能转换成`IDXGIFactory2*`，因此可以用`ComPtr::As`方法来尝试获取，失败了也只不过是返回一个`nullptr`指针。但如果此时你用有一个`IDXGIFactory2*`，你调用`ComPtr::As`来获取`IDXGIFactory1*`则是必然成功的操作。
+这里要仔细品味`ComPtr::As`方法的作用。该方法相当于调用`IUnknown::QueryInterface`，用于查询这个接口类指针指向的对象是否实现了某个特定接口(即有没有继承，但这个继承不一定是直接继承关系，还可以是间接继承)，若有则返回这个特定接口的指针。比如说`IDXGIFactory2`继承自`IDXGIFactory1`，此时我们有了一个`IDXGIFactory1*`，但我们不知道它能不能转换成`IDXGIFactory2*`，因此可以用`ComPtr::As`方法来尝试获取，失败了也只不过是返回一个`nullptr`指针。但如果此时你拥有一个`IDXGIFactory2*`，你调用`ComPtr::As`来获取`IDXGIFactory1*`则是必然成功的操作。
 
 刚才也说到`ComPtr::As`也可以查询间接继承的接口，比如微软告诉你`ID3D11Device`可以通过`IUnknown::QueryInterface`方法获取`IDXGIDevice`，虽然你从继承关系上看不出来有什么联系，但至少在它的实例类中的某一层关系上肯定是有一个内部类继承了接口类`IDXGIDevice`的。
 
