--- a/docs/part1/01.md
+++ b/docs/part1/01.md
@@ -311,7 +311,7 @@ assert(m_4xMsaaQuality > 0);
 
 虽然说提高像素的分辨率能够缩小像素的大小，但还有一种办法，就是采用各种**反走样（antialiasing）**技术。
 
-例如，超采样技术使用4倍（宽度x2，高度x2）于屏幕分辨率大小的后备缓冲区和深度缓冲区。当数据局要从后备缓冲区调往屏幕显示的时候，会将后备缓冲区按4个像素一组进行**解析**（**resolve**，或称**降采样**，**downsample**）。通过求平均值的方法，把放大的采样点数降低回原采样点数来得到一种相对平滑的像素颜色。超采样不仅需要原来4倍的内存空间，还需要4倍的绘制开销和额外的解析开销，用空间和时间来换取画面的分辨率。
+例如，超采样技术使用4倍（宽度x2，高度x2）于屏幕分辨率大小的后备缓冲区和深度缓冲区。当数据要从后备缓冲区调往屏幕显示的时候，会将后备缓冲区按4个像素一组进行**解析**（**resolve**，或称**降采样**，**downsample**）。通过求平均值的方法，把放大的采样点数降低回原采样点数来得到一种相对平滑的像素颜色。超采样不仅需要原来4倍的内存空间，还需要4倍的绘制开销和额外的解析开销，用空间和时间来换取画面的分辨率。
 
 而Direct3D还支持一种在性能和效果等方面都较为折中的反走样技术，即**多重采样（multisample，或MSAA，全称MultiSample Anti-Aliasing）**技术。现在假设我们使用4X多重采样（原来的1个像素对应现在的2x2像素），则他同样使用4倍于游戏分辨率的后备缓冲区和深度缓冲区（注意我们在创建后备缓冲区的时候是指定分辨率而不是指定缓冲区宽高）。跟上面那种方法不同，对每个2x2像素，我们是对这四个像素的中心位置仅采样一次，然后再对这4个像素基于可视性（深度/模板测试）和覆盖性（这些子像素的中心是否在多边形的里面）来决定是否把采样的颜色赋值给它。最后的解析行为则和超采样的一致。这种做法节省了绘制开销，虽然精准度没上面的高，但也能取得比较不错的效果。
 
