--- a/docs/part1/10.md
+++ b/docs/part1/10.md
@@ -310,19 +310,50 @@ $$
 \theta_{y}=atan2(m_{31}, m_{33}) \\
 \theta_{z}=atan2(m_{12}, m_{22})
 $$
-但在还原欧拉角的时候，由于浮点数的精度问题，可能会导致$m_32$莫名其妙地大于1，从而导致根式部分无定义。
-
+但在还原欧拉角的时候，若$\theta_x$为$\pi/2$或$-\pi/2$，则会导致万向节死锁的问题。以$\theta_x=\pi/2$为例：
+$$
+\begin{aligned}
+\frac{m_{13}}{m_{11}}&=\frac{sin\theta_z cos\theta_y-cos\theta_z sin\theta_y}{sin\theta_z sin\theta_y+cos\theta_z cos\theta_y} \\
+&=\frac{sin(\theta_z-\theta_y)}{cos(\theta_z-\theta_y)} \\
+&= tan(\theta_z - \theta_y)
+\end{aligned}
+$$
+此时取$\theta_z = 0$，则：
+$$
+\theta_y=-arctan\frac{m_{13}}{m_{11}}
+$$
+同理，$\theta_x=-\pi/2$时：
+$$
+\begin{aligned}
+\frac{m_{13}}{m_{11}}&=\frac{-sin\theta_z cos\theta_y-cos\theta_z sin\theta_y}{-sin\theta_z sin\theta_y+cos\theta_z cos\theta_y} \\
+&=\frac{-sin(\theta_z+\theta_y)}{cos(\theta_z+\theta_y)} \\
+&= -tan(\theta_z + \theta_y)
+\end{aligned}
+$$
+此时取$\theta_z=0$，则：
+$$
+\theta_y=-arctan\frac{m_{13}}{m_{11}}
+$$
 因此我们的欧拉角还原函数如下：
 
 ```cpp
 XMFLOAT3 Transform::GetEulerAnglesFromRotationMatrix(const XMFLOAT4X4& rotationMatrix)
 {
+    DirectX::XMFLOAT3 rotation{};
+    // 死锁特殊处理
+    if (fabs(1.0f - fabs(rotationMatrix(2, 1))) < 1e-5f)
+    {
+        rotation.x = copysignf(DirectX::XM_PIDIV2, -rotationMatrix(2, 1));
+        rotation.y = -atan2f(rotationMatrix(0, 2), rotationMatrix(0, 0));
+        return rotation;
+    }
+
     // 通过旋转矩阵反求欧拉角
     float c = sqrtf(1.0f - rotationMatrix(2, 1) * rotationMatrix(2, 1));
     // 防止r[2][1]出现大于1的情况
     if (isnan(c))
         c = 0.0f;
-    XMFLOAT3 rotation;
+
     rotation.z = atan2f(rotationMatrix(0, 1), rotationMatrix(1, 1));
     rotation.x = atan2f(-rotationMatrix(2, 1), c);
     rotation.y = atan2f(rotationMatrix(2, 0), rotationMatrix(2, 2));
