公式符号遗漏处理

--- a/docs/part1/04.md
+++ b/docs/part1/04.md
@@ -337,7 +337,7 @@ u_z & v_z & w_z & 0 \\
 u_x & v_x & w_x & 0 \\
 u_y & v_y & w_y & 0 \\
 u_z & v_z & w_z & 0 \\
--Q_x\cdot \mathbf{u} & Q_y\cdot \mathbf{v} & Q_z\cdot \mathbf{w} & 1 \\
+-Q_x\cdot \mathbf{u} & -Q_y\cdot \mathbf{v} & -Q_z\cdot \mathbf{w} & 1 \\
 \end{bmatrix}
 $$
 现在我们来展示一种用于构建观察矩阵中所有向量的直观方法。若已知**Q**为摄像机的位置，**T**为摄像机对准的观察目标点，**j**为世界空间“向上”方向的单位向量。（下图以平面xOz作为场景中的“地平面”，并以世界空间的y轴作为摄像机“向上”的方向。因此，**j**=(0,1,0)仅是平行于世界空间中y轴的一个单位向量）对于下图来说，虚拟摄像机的观察方向为：
